# eleicao2022

./: .gitignore  get_alerts.py  main.py  merge_csvs.py  pyproject.toml
